05-network-policy/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-client
  labels:
    role: test-client
spec:
  containers:
    - name: busybox
      image: busybox
      command: ["sleep", "3600"]
